--- a/app/styles/layout/_platform-grid.scss
+++ b/app/styles/layout/_platform-grid.scss
@@ -5,13 +5,13 @@
     grid-template-areas: "topbar"
                       "main"
                       "primary-nav";    
-    height: 100%;
+    height: 100vh;
   }
 
 
   @include media-query(sm){
     grid-template-columns: max-content 1fr;
-    grid-template-rows: minmax(30px, max-content) 1fr;
+    grid-template-rows: auto;
     grid-template-areas: "topbar topbar"
                         "primary-nav main";    
   }
